# cantocaptions-ai

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
cantocaptions_ai/: __init__.py  __main__.py
cantocaptions_ai/assets/: config_vocals_mel_band_roformer.yaml
cantocaptions_ai/cantonese/: acronyms.py  cleaner.py  conjunctions.py  linebreak.py  numbers.py  questions.py  rules.py  text.py
cantocaptions_ai/cantonese/opencc/: HKVariants.txt  STCharacters.txt  STPhrases.txt  s2t_c.json
cantocaptions_ai/cantonese/rules/: asr_errors.toml  chars_hk.toml  comma_conjunctions.toml  interjection_noise.toml  misc_conventions.toml  particle_conventions.toml  pipeline.toml  punctuation.toml  question_post.toml  repeated_speech.toml
cantocaptions_ai/pipeline/: _asr_legacy.py  _asr_native.py  alignment.py  asr.py  cli_config.py  config.py  diarize.py  ensemble.py  llm_correction.py  model_profiles.py  retime.py  speaker_verification.py  transcribe.py  vad.py  vocal_isolation.py
cantocaptions_ai/pipeline/mbroformer/: attend.py
cantocaptions_ai/pipeline/vads/: __init__.py  base.py  pyannote.py
cantocaptions_ai/utils/: audio.py  debug.py  log_utils.py  model_utils.py  output.py  schema.py  suber.py
config/: cpu.cfg  fast_test.cfg  hulkdefault.cfg
scripts/: bench_alignment_batching.py  bench_asr_batching.py  bench_asr_compile.py  bench_asr_native.py  bench_vad_load.py  bench_vocal_isolation_batching.py  debug_reference_pass.py
tests/: test_alignment_batching.py  test_asr_batching.py  test_audio_track_select.py  test_batch_executor.py  test_cantonese_cleaner.py  test_cli_config.py  test_model_profiles.py  test_offline_fallback.py  test_reference_correction.py  test_vocal_isolation_batching.py
