[project]
urls = { repository = "https://github.com/rookes/cantocaptions-ai" }
authors = [{ name = "Jon Miller" }]
name = "cantocaptions-ai"
version = "0.8.0"
description = "End-to-end pipeline for high-quality, time-accurate written Cantonese subtitles."
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = "GPL-3.0-only"

dependencies = [
    "transformers>=4.57.6",
    "qwen-asr>=0.0.6",
    "numpy>=2.1.0",
    "pandas>=2.2.3",
    "pyannote-audio>=4.0.0",
    "huggingface-hub>=0.34.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "opencc>=1.0.0",
    "nltk>=3.9.1",
    "tqdm>=4.0",
    "omegaconf>=2.3.0",
    "einops>=0.6.0",
    "beartype>=0.16.0",
    "rotary-embedding-torch>=0.6.0",
    "librosa>=0.10.0",
    "pycantonese>=3.4.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
ensemble = ["faster-whisper>=1.0.0"]
llm = ["bitsandbytes>=0.43.0"]
diarize = ["nemo_toolkit[asr]; sys_platform == 'linux'", "matplotlib"]
compile = [
    "triton; sys_platform == 'linux'",
    "triton-windows<3.7; sys_platform == 'win32'",
]
flash-attn = [
    "flash-attn>=2.0.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
]
xet = ["hf-xet"]
full = [
    "faster-whisper>=1.0.0",
    "bitsandbytes>=0.43.0",
    "nemo_toolkit[asr]; sys_platform == 'linux'",
    "matplotlib",
    "triton; sys_platform == 'linux'",
    "triton-windows<3.7; sys_platform == 'win32'",
    "flash-attn>=2.0.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "hf-xet",
]

[project.scripts]
cantocaptions = "cantocaptions_ai.__main__:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["."], include = ["cantocaptions_ai*"] } }

[tool.setuptools.package-data]
cantocaptions_ai = ["cantonese/opencc/*", "cantonese/rules/*.toml", "assets/*"]

# torchcodec (transitive dep of pyannote-audio >=4) has no wheels for Windows, macOS, or Linux aarch64.
# Only Linux x86_64 has torchcodec wheels; everywhere else we override it away.
[tool.uv]
environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin'",
]
override-dependencies = [
    "torchcodec>=0.6.0; sys_platform != 'linux' or platform_machine != 'x86_64'",
    # qwen-asr 0.0.6 hard-pins transformers==4.57.6.  Pin here too so uv doesn't
    # resolve to a newer PyPI release.  Remove once qwen-asr is updated or
    # transformers ships an official release with qwen3_asr built in.
    "transformers==4.57.6",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cpu", marker = "platform_machine != 'AMD64' and platform_machine != 'x86_64' and sys_platform != 'darwin'" },
  { index = "pytorch", marker = "platform_machine == 'x86_64' and sys_platform == 'linux'" },
  { index = "pytorch", marker = "platform_machine == 'AMD64' and sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cpu", marker = "platform_machine != 'AMD64' and platform_machine != 'x86_64' and sys_platform != 'darwin'" },
  { index = "pytorch", marker = "platform_machine == 'x86_64' and sys_platform == 'linux'" },
  { index = "pytorch", marker = "platform_machine == 'AMD64' and sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "subtitle-edit-rate>=0.4.0",
]
